<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_header_editor_title"
    android:key="KEY_HEADER_EDITOR">

    <PreferenceCategory android:title="@string/pref_category_font">

        <SeekBarPreference
            android:title="@string/pref_font_size_title"
            android:summary="@string/pref_font_size_summary"
            android:key="FONT_SIZE_2"
            android:defaultValue="14"
            android:max="20"
            app:min="10"
            app:showSeekBarValue="true"/>

        <ListPreference
            android:title="@string/pref_font_type_title"
            android:key="FONT_TYPE_1"
            android:entries="@array/font_types"
            android:entryValues="@array/font_types_values"
            android:defaultValue="droid_sans_mono"
            android:enabled="false"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_tabs">

        <SwitchPreferenceCompat
            android:title="@string/pref_resume_session_title"
            android:summary="@string/pref_resume_session_summary"
            android:key="RESUME_SESSION"
            android:defaultValue="true"/>

        <SeekBarPreference
            android:title="@string/pref_max_page_title"
            android:summary="@string/pref_max_page_summary"
            android:key="MAX_TABS_COUNT_2"
            android:defaultValue="5"
            android:enabled="false"
            android:max="10"
            app:min="2"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_editor">

        <SwitchPreferenceCompat
            android:title="@string/pref_word_wrap_title"
            android:summary="@string/pref_word_wrap_summary"
            android:defaultValue="true"
            android:key="WRAP_CONTENT"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_code_completion_title"
            android:summary="@string/pref_code_completion_summary"
            android:defaultValue="true"
            android:key="CODE_COMPLETION"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_pinch_zoom_title"
            android:summary="@string/pref_pinch_zoom_summary"
            android:defaultValue="true"
            android:key="PINCH_ZOOM"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_line_numbers_title"
            android:summary="@string/pref_line_numbers_summary"
            android:defaultValue="true"
            android:key="SHOW_LINE_NUMBERS"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_highlight_line_title"
            android:summary="@string/pref_highlight_line_summary"
            android:defaultValue="true"
            android:key="HIGHLIGHT_CURRENT_LINE"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_highlight_delimiters_title"
            android:summary="@string/pref_highlight_delimiters_summary"
            android:defaultValue="true"
            android:key="HIGHLIGHT_MATCHING_DELIMITERS"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_keyboard">

        <SwitchPreferenceCompat
            android:title="@string/pref_extended_keyboard_title"
            android:summary="@string/pref_extended_keyboard_summary"
            android:defaultValue="true"
            android:key="USE_EXTENDED_KEYBOARD"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_soft_keyboard_title"
            android:summary="@string/pref_soft_keyboard_summary"
            android:defaultValue="false"
            android:key="USE_SOFT_KEYBOARD"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_ime_keyboard_title"
            android:summary="@string/pref_ime_keyboard_summary"
            android:defaultValue="false"
            android:key="USE_IME_KEYBOARD"/>

    </PreferenceCategory>

</PreferenceScreen>