<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_header_files_title"
    android:key="KEY_HEADER_FILES">

    <PreferenceCategory android:title="@string/pref_category_file_explorer">

        <SwitchPreferenceCompat
            android:title="@string/pref_showHiddenFiles_title"
            android:summary="@string/pref_showHiddenFiles_summary"
            android:defaultValue="true"
            android:key="SHOW_HIDDEN_FILES"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_foldersOnTop_title"
            android:summary="@string/pref_foldersOnTop_summary"
            android:defaultValue="true"
            android:key="FOLDERS_ON_TOP"/>

        <ListPreference
            android:title="@string/pref_sortMode_title"
            android:entries="@array/sort_mode"
            android:entryValues="@array/sort_mode_values"
            android:defaultValue="0"
            android:key="SORT_MODE"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_cache">

        <Preference
            android:title="@string/pref_invalidateCaches_title"
            android:summary="@string/pref_invalidateCaches_summary" />

    </PreferenceCategory>

</PreferenceScreen>