<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_header_codeStyle_title"
    android:key="KEY_HEADER_CODE_STYLE">

    <PreferenceCategory android:title="@string/pref_category_code_style">

        <SwitchPreferenceCompat
            android:title="@string/pref_auto_indent_title"
            android:summary="@string/pref_auto_indent_summary"
            android:defaultValue="true"
            android:key="AUTO_INDENTATION"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_close_brackets_title"
            android:summary="@string/pref_close_brackets_summary"
            android:defaultValue="true"
            android:key="AUTOCLOSE_BRACKETS"/>

        <SwitchPreferenceCompat
            android:title="@string/pref_close_quotes_title"
            android:summary="@string/pref_close_quotes_summary"
            android:defaultValue="false"
            android:key="AUTOCLOSE_QUOTES"/>

    </PreferenceCategory>

</PreferenceScreen>