<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_file_new"
        android:title="@string/menu_file_new"/>
    <item
        android:id="@+id/menu_file_open"
        android:title="@string/menu_file_open"/>
    <item
        android:id="@+id/menu_file_save"
        android:title="@string/menu_file_save"/>
    <item
        android:id="@+id/menu_file_properties"
        android:title="@string/menu_file_properties"/>
    <item
        android:id="@+id/menu_file_close"
        android:title="@string/menu_file_close"/>
</menu>