<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Light Team Software (Light Team) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The Light Team licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/hint_search"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_show_hidden"
        android:title="@string/pref_showHiddenFiles_title"
        android:checkable="true"
        app:showAsAction="never"/>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sort_by_name"
            android:title="@string/sort_by_name"
            app:showAsAction="never"/>

        <item
            android:id="@+id/sort_by_size"
            android:title="@string/sort_by_size"
            app:showAsAction="never"/>

        <item
            android:id="@+id/sort_by_date"
            android:title="@string/sort_by_date"
            app:showAsAction="never"/>

    </group>

</menu>